--- a/2-spring/money-transfer-system/pom.xml
+++ b/2-spring/money-transfer-system/pom.xml
@@ -31,6 +31,11 @@
             <version>5.3.27</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>5.3.27</version>
+        </dependency>
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.19</version>
