backend-greet-service with Jenkinsfile

--- a/6-devops/backend-greet-service/Jenkinsfile
+++ b/6-devops/backend-greet-service/Jenkinsfile
@@ -4,17 +4,9 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo 'Building..'
-            }
-        }
-        stage('Test') {
-            steps {
-                echo 'Testing..'
-            }
-        }
-        stage('Deploy') {
-            steps {
-                echo 'Deploying....'
+                dir('6-devops/backend-greet-service'){
+                    sh './mvnw clean package'
+                }
             }
         }
     }
