--- a/6-devops/backend-greet-service/Jenkinsfile
+++ b/6-devops/backend-greet-service/Jenkinsfile
@@ -23,5 +23,12 @@ pipeline {
                 }
             }
         }
+        stage('K8s deploy i.e CD') {
+            steps {
+                dir('6-devops/backend-greet-service'){
+                    sh 'kubectl apply -f k8s/backend-greet-service.yml'
+                }
+            }
+        }
     }
 }
