--- a/7-nosql/mongodb-replicaset-demo/src/main/resources/application.properties
+++ b/7-nosql/mongodb-replicaset-demo/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 
 
 
-spring.data.mongodb.uri=mongodb://localhost:40001,localhost:40002,localhost:40003/db1?readPreference=secondary
+spring.data.mongodb.uri=mongodb://localhost:60000/db1?readPreference=secondary
